# ecommerce_assistant

./: .gitignore  README.md  pyproject.toml
docs/: user_stories.md
src/: AssisstantManager.py  app.py  main.py
src/assistant_creation_scripts/: __init__.py  config.py  creation_script.py
src/assistant_creation_scripts/tools/: __init__.py  get_product_info_by_category.py  get_product_info_by_name.py  get_product_stock_by_id.py  package.py  query_funcs.py  query_tools.py  utils.py
src/tools/: available_tools.py  get_product_info_by_category.py  get_product_info_by_name.py  get_product_stock_by_id.py
test_data/: grocery_store_mock_data.json
